--- a/app/build.gradle
+++ b/app/build.gradle
@@ -34,4 +34,5 @@ dependencies {
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
     implementation 'com.jakewharton.rxbinding2:rxbinding:2.2.0'
     implementation "io.reactivex.rxjava2:rxjava:2.2.2"
+    implementation "com.android.support:recyclerview-v7:26.1.0"
 }
