--- a/app/build.gradle
+++ b/app/build.gradle
@@ -35,4 +35,6 @@ dependencies {
     implementation 'com.jakewharton.rxbinding2:rxbinding:2.2.0'
     implementation "io.reactivex.rxjava2:rxjava:2.2.2"
     implementation "com.android.support:recyclerview-v7:26.1.0"
+    implementation 'com.squareup:otto:1.3.8'
+    implementation 'com.jakewharton.timber:timber:4.6.0'
 }
