--- a/app/build.gradle
+++ b/app/build.gradle
@@ -37,4 +37,6 @@ dependencies {
     implementation "com.android.support:recyclerview-v7:26.1.0"
     implementation 'com.squareup:otto:1.3.8'
     implementation 'com.jakewharton.timber:timber:4.6.0'
+    implementation 'com.android.support:design:26.1.0'
+    implementation 'io.paperdb:paperdb:2.6'
 }
