--- a/app/build.gradle
+++ b/app/build.gradle
@@ -39,4 +39,7 @@ dependencies {
     implementation 'com.jakewharton.timber:timber:4.6.0'
     implementation 'com.android.support:design:26.1.0'
     implementation 'io.paperdb:paperdb:2.6'
+    implementation 'com.squareup.picasso:picasso:2.71828'
+    implementation 'com.github.tbruyelle:rxpermissions:0.10.2'
+    implementation 'com.android.support:design:27.1.0'
 }
