--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,7 +4,7 @@ android {
     compileSdkVersion 26
     defaultConfig {
         applicationId "com.swat_cat.firstapp"
-        minSdkVersion 21
+        minSdkVersion 19
         multiDexEnabled true
         targetSdkVersion 26
         versionCode 1
@@ -42,4 +42,5 @@ dependencies {
     implementation 'com.squareup.picasso:picasso:2.71828'
     implementation 'com.github.tbruyelle:rxpermissions:0.10.2'
     implementation 'com.android.support:design:27.1.0'
+    implementation 'com.github.pavlospt:rxfile:1.8'
 }
