--- a/app/build.gradle
+++ b/app/build.gradle
@@ -51,4 +51,6 @@ dependencies {
     //ROOM
     implementation "android.arch.persistence.room:runtime:1.1.1"
     implementation "android.arch.persistence.room:rxjava2:1.1.1"
+    annotationProcessor "android.arch.persistence.room:compiler:1.1.1"
+
 }
