--- a/app/build.gradle
+++ b/app/build.gradle
@@ -44,6 +44,8 @@ dependencies {
     implementation 'com.android.support:design:27.1.0'
     implementation 'com.github.pavlospt:rxfile:1.8'
     implementation 'com.makeramen:roundedimageview:2.3.0'
+    implementation 'me.zhanghai.android.materialratingbar:library:1.3.1'
+    implementation 'com.xiaofeng.android:flowlayoutmanager:1.2.3.2'
     //retrofit + okHttp
     implementation 'com.squareup.retrofit2:retrofit:2.4.0'
     implementation 'com.squareup.retrofit2:converter-gson:2.4.0'
