--- a/app/build.gradle
+++ b/app/build.gradle
@@ -61,5 +61,6 @@ dependencies {
     implementation 'com.google.firebase:firebase-core:16.0.5'
     implementation 'com.google.firebase:firebase-auth:16.0.5'
     implementation 'com.xiaofeng.android:flowlayoutmanager:1.2.3.2'
+    implementation 'com.github.mirrajabi:rx-contacts2:1.2.0'
 }
 apply plugin: 'com.google.gms.google-services'
